prevslide function corrected and shiftarrayleft function added

--- a/styles.css
+++ b/styles.css
@@ -373,15 +373,15 @@ figcaption {
     }
 
     .rightProjectInfo {
-      padding-bottom: 10%;
+      padding-bottom: 15%;
     }
-
+/* 
     footer{
 
         background-color: white;
 
 
-    }
+    } */
 
   }
 
